# hierarchical-coordination-detection

./: .dockerignore  Coordination_model_Full.ipynb  README.md  coordination_cli.py  generated_API_Shared (copy).ipynb  hierarchical-coordination.py
docker/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  sample-config.yaml
service/: .gitignore  .pre-commit-config.yaml  .ruff.toml  OpenAPI.yaml  cleanup.py  coordination_worker.py  docker-entrypoint.sh  main.py  pyproject.toml
service/coordination/: api.py  config.py  model.py  redis_connection.py  webapp.py
service/coordination/blueprints/: job_routes.py  post_routes.py
service/coordination/data_sources/: csv_handler.py  es_handler.py
service/coordination/datastore/: __init__.py  s3_datastore.py  shared_folder.py
service/coordination/processing/: coordination.py  entropy.py  graph.py  matrix.py
service/coordination/processing/tests/: test_coordination.py  test_entropy.py  test_graph.py  test_matrix.py  test_matrix_complex.py
service/coordination/types/: __int__.py  base.py  data.py  graph.py  results.py
service/coordination/utils/: result_generator.py  text.py
ui/: README.md  index.html  package-lock.json  package.json  sws-config.toml  vite.config.js
ui/src/: AccountAge.jsx  App.jsx  EdgeDisplay.jsx  Info.jsx  LinkTimes.jsx  NodeDisplay.jsx  PostDisplay.jsx  PostTimes.jsx  RawEdgeDisplay.jsx  ResultDisplay.jsx  Settings.jsx  TimeGap.jsx  api.js  linkify.jsx
