[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coordination-service"
version = "0.2.0"
description = "Hierarchical Coordination Detection Service."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "blinker>=1.7.0",
    "certifi>=2025.4.26",
    "chardet>=4.0.0",
    "click>=8.1.7",
    "dataclass_wizard>=0.35.0",
    "Flask>=3.0.3,<4.0.0",
    "gunicorn>=21.2.0",
    "idna>=2.10,<3.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "Jinja2>=3.1.3,<4.0.0",
    "MarkupSafe>=2.1.5",
    "numpy>=1.26.3,<2.0.0",
    "pandas[fss]>=2.1.4,<3.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "pyyaml~=6.0",
    "redis>=5.0.1,<6.0.0",
    "requests>=2.25.1",
    "rq>=1.15.1, <2.0.0",
    "s3fs[boto3]>=2025.2.0",
    "scipy>=1.11.3,<2.0.0",
    "networkx>=2.8.8,<3.0.0",
    "six>=1.16.0",
    "tqdm>=4.67.1",
    "tzdata>=2025.2",
    # "urllib3==1.24.1",

    "python-louvain>=0.16,<1.0.0",
    "Werkzeug>=3.0.2,<3.1.0",
    "whitenoise>=6.6.0,<7.0",
    "elasticsearch>=7.17.2,<8.0.0",
    "flask-compress>=1.17",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.11.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
]

[tool.setuptools]
# automatically scanning all packages: {find = {}}
packages = {find = {}}

[tool.pytest.ini_options]
testpaths = ["coordination/tests"]
python_files = "test_*.py"
pythonpath = ["."]
